--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "start:dev": "nodemon ./server/server.js",
     "start": "node ./server/server.js",
     "seed": "node ./database/seed.js",
+    "csv_seed": "node ./database/csv_seed.js",
     "test:dev": "npx jest --watch",
     "test": "jest --ci --runInBand  --reporters=default --reporters=jest-junit"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "csv-write-stream": "^2.0.0",
+    "csv-writer": "^1.5.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.10",
     "morgan": "^1.9.1"
