--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "build:deploy": "npx webpack --mode=production && npx grunt",
     "build:dev": "npx webpack --mode=development --watch",
     "build": "npx webpack --mode=production",
-    "start:dev": "nodemon ./server/server.js",
-    "start": "node ./server/server.js",
-    "seed": "node ./database/seed.js",
+    "start:dev": "nodemon ./server/index.js",
+    "start": "node ./server/index.js",
     "csv_seed": "node ./database/csv_seed.js",
+    "postgresSQL_seed": "psql -d nearbyListingsDB < ./database/schema.sql",
     "test:dev": "npx jest --watch",
     "test": "jest --ci --runInBand  --reporters=default --reporters=jest-junit"
   },
@@ -34,7 +34,10 @@
     "csv-writer": "^1.5.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.10",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "newrelic": "^5.11.0",
+    "pg": "^7.12.1",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "prop-types": "^15.7.2",
